# Projet-info-snoopy

./: .gitignore  CMakeLists.txt  README.md  main.c
Snoopy/: snoopyMovement.c  snoopyMovement.h
elements/: elements.c  elements.h
menu/: mainmenu.c  mainmenu.h
pause/: pause.c  pause.h
score/: score.c  score.h
stockage/: bestScore.txt  data.txt  level1.txt  level2.txt  level3.txt  level4.txt  save.c  save.h
utils/: color.c  color.h  keysHandler.c  keysHandler.h  size.c  size.h  sleep.c  sleep.h
